--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@ nav {
   height: 50px;
 }
 
+.space{
+  height: 5px;
+}
+
 .welcome-text{
   width: 50%;
   max-width: 670px;
@@ -35,7 +39,8 @@ nav {
 }
 
 .button {
-  width: 150px;
+  max-width: 150px;
+  width:80%;
   background-color: #9c73ff;
   border-radius: 10px;
   display: flex;
@@ -44,6 +49,8 @@ nav {
   color: white;
   text-decoration: none;
   font-weight: 200;
+  border-style: none;
+  cursor: pointer;
 }
 
 .button-icon img {
@@ -52,7 +59,7 @@ nav {
 
 .button-icon  {
   display: flex;
-  margin-right: 30px;
+  margin-right: 0.5em;
 }
 
 .task-manager-container {
@@ -60,10 +67,83 @@ nav {
   background-color: white;
   border: 1px solid #dae0ed;
   border-radius: 30px;
+  display: flex;
+  justify-content: space-evenly;
+  box-sizing:border-box;
+  padding: 20px 0;
+  height: 510px;
+  overflow: scroll;
 }
 
 .month {
-  color: #383838;
+  color:#9c73ff;
   font-size: 22px;
   font-weight: 600;
+}
+
+.day-wrapper{
+  width:13%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.day-date{
+  color: #dae0ed;
+  margin: 5px 0;
+}
+
+.task-wrapper{
+  background-color: #dae0ed;
+  min-height: 400px;
+  border-radius: 28px;
+  width: 100%;
+  box-sizing:border-box;
+  padding: 10px;
+  margin-top: 10px;
+}
+
+.task-box{
+  width:100%;
+  border-radius: 25px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  box-sizing:border-box;
+  padding: 16px 8px;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+.task-title{
+  margin: 5px 0;
+  font-weight: 600;
+}
+
+.task-time{
+  margin: 5px 0;
+  text-decoration: underline;
+}
+
+.task-description{
+  margin: 5px 0 15px 0;
+  font-size: 14px;
+  color: #383838;
+}
+
+.unfold{
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.hidden{
+  display: none;
+}
+
+.visible{
+  display: flex;
 }
