--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,16 @@ body{
   overflow: hidden;
 }
 
-nav {
+nav{
   width: 100%;
   background-color: #dae0ed;
   padding: 10px 50px;
   display: flex;
+}
+
+a{
+  margin: 0;
+  padding: 0;
 }
 
 .logo{
@@ -38,7 +43,7 @@ nav {
   flex-direction: column;
 }
 
-.button {
+.button{
   max-width: 150px;
   width:80%;
   background-color: #9c73ff;
@@ -51,6 +56,12 @@ nav {
   font-weight: 200;
   border-style: none;
   cursor: pointer;
+  transition: width 0.2s ease, max-width 0.2s ease;
+}
+
+.button:hover{
+  width:82%;
+  max-width: 160px;
 }
 
 .button-icon img {
@@ -62,7 +73,29 @@ nav {
   margin-right: 0.5em;
 }
 
-.task-manager-container {
+.add-task-button{
+  border-radius: 50%;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  transition: filter 0.3s ease;
+}
+
+.add-task-button:hover{
+  filter: brightness(1.05)
+}
+
+.add-task-button :hover{
+  width: 55px;
+  height: 55px;
+}
+.add-task-button img{
+  width: 50px;
+  height: 50px;
+  transition: width 0.3s ease;
+}
+
+.task-manager-container{
   width:80%;
   background-color: white;
   border: 1px solid #dae0ed;
@@ -101,6 +134,9 @@ nav {
   box-sizing:border-box;
   padding: 10px;
   margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .task-box{
@@ -115,6 +151,11 @@ nav {
   padding: 16px 8px;
   cursor: pointer;
   margin-bottom: 10px;
+  transition: filter 0.3s ease;
+}
+
+.task-box:hover{
+  filter: brightness(1.05)
 }
 
 .task-title{
@@ -146,4 +187,24 @@ nav {
 
 .visible{
   display: flex;
+}
+
+.nav-button{
+  width: 70px;
+  height: 35px;
+  background-color: #dae0ed;
+  border: 1px solid white;
+  border-radius: 30px;
+  transition: filter 0.3s ease;
+}
+
+.nav-button:hover{
+  filter: brightness(1.05)
+}
+
+.nav-button-wrapper{
+  display: flex;
+  justify-content: space-between;
+  width: 180px;
+  margin-top: 30px;
 }
