--- a/src/App.css
+++ b/src/App.css
@@ -44,8 +44,8 @@ a{
 }
 
 .button{
-  max-width: 150px;
-  width:80%;
+  max-width: 130px;
+  width:100%;
   background-color: #9c73ff;
   border-radius: 10px;
   display: flex;
@@ -54,14 +54,19 @@ a{
   color: white;
   text-decoration: none;
   font-weight: 200;
+  font-size: 14px;
   border-style: none;
   cursor: pointer;
-  transition: width 0.2s ease, max-width 0.2s ease;
+  transition: width 0.5s ease, max-width 0.5s ease;
 }
 
 .button:hover{
   width:82%;
-  max-width: 160px;
+  max-width: 120px;
+}
+
+.button-link{
+  width:88%;
 }
 
 .button-icon img {
@@ -159,6 +164,7 @@ a{
 }
 
 .task-title{
+  font-size: 14px;
   margin: 5px 0;
   font-weight: 600;
 }
