--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body{
 
 nav{
   width: 100%;
-  background-color: #dae0ed;
+  background-color:white;
   padding: 10px 50px;
   display: flex;
 }
@@ -19,7 +19,8 @@ a{
 }
 
 .logo{
-  height: 50px;
+  height: 20px;
+  margin-top: 5px;
 }
 
 .space{
@@ -242,6 +243,7 @@ a{
   border: 1px solid white;
   border-radius: 30px;
   transition: filter 0.3s ease;
+  cursor: pointer;
 }
 
 .nav-button:hover{
